<resources>
    <string name="APP_NAME" translatable="false">ClassQRoom</string>
    <string name="BUTTON_LOGIN">Login</string>
    <string name="BUTTON_CANCEL">Cancel</string>
    <string name="APP_VERSION">Version</string>
    <string name="TEXT_NAME">Name</string>
    <string name="TEXT_SURNAME">Surname</string>
    <string name="TEXT_STUDENT_EMAIL">Student\'s Email</string>
    <string name="TEXT_PASSWORD">Password</string>
    <string name="TEXT_CONFIRM_PASSWORD">Confirm Password</string>
    <string name="BUTTON_FORGOT_PASSWORD">Forgot Password</string>
    <string name="BUTTON_RESET_PASSWORD">Reset Password</string>
    <string name="TEXT_STUDENT_NUMBER">Student\'s Number</string>
    <string name="TEXT_WELCOME">Welcome, %1$s</string>
    <string name="UI_QR_CODE">QR Code</string>
    <string name="UI_NFC">NFC</string>
    <string name="UI_CODE">Code</string>
    <string name="UI_ATTENDANCES">Attendances</string>
    <string name="UI_SETTINGS">Settings</string>
    <string name="UI_PROFILE">Profile</string>
    <string name="MSG_LOGOUT">Are you sure you want to log out?</string>
    <string name="BUTTON_YES">Yes</string>
    <string name="BUTTON_NO">No</string>
    <string name="ERROR_FILL_BLANKS">Please fill all the blanks!</string>
    <string name="ERROR_NOT_SAME_PASSWORD">Passwords do not match each other! Please try again.</string>
    <string name="BUTTON_CONFIRM">Confirm</string>
    <string name="ERROR_NOT_REGISTERED_EMAIL">The email address you entered is not registered.</string>
    <string name="TEXT_IMAGEVIEW_LOGO" translatable="false">Logo</string>
    <string name="BUTTON_NEXT">Next</string>
    <string name="BUTTON_PREVIOUS">Previous</string>
    <string name="MSG_SET_PASSWORD">Please set a password!</string>
    <string name="MSG_SENT_RESET_LINK_TO_EMAIL">Password reset link has been sent! Please check your mail.</string>
    <string name="TEXT_COMPULSORY">Compulsory</string>
    <string name="TEXT_ELECTIVE">Elective</string>
    <string name="TEXT_COURSE">Course</string>
    <string name="TEXT_LECTURER">Lecturer</string>
    <string name="TEXT_DEPARTMENT">Department</string>
    <string name="MSG_QR_CODE_SCAN">Please scan the QR Code to join the class!</string>
    <string name="BUTTON_SCAN_QR_CODE">Scan the QR Code</string>
    <string name="BUTTON_BACK">Back</string>
    <string name="ERROR_LOGIN">An error occurred during login!</string>
    <string name="BUTTON_START_COURSE">Start Course</string>
    <string name="BUTTON_ADD">Add</string>
    <string name="ERROR_INVALID_FORMAT">Invalid Format!</string>
    <string name="BUTTON_SAVE">Save</string>
    <string name="LANG_ENGLISH">English</string>
    <string name="LANG_TURKISH">Turkish</string>
    <string name="LANG_FRENCH">French</string>
    <string name="LANG_ITALIAN">Italian</string>
    <string name="LANG_SPANISH">Spanish</string>
    <string name="LANG_RUSSIAN">Russian</string>
    <string name="LANG_GERMAN">German</string>
    <string name="LANG_PORTUGUESE">Portuguese</string>
    <string name="TEXT_LANGUAGE">Language</string>
    <string name="TEXT_ID">ID</string>
    <string name="BUTTON_ADD_NEW">Add New</string>
    <string name="TEXT_LECTURER_EMAIL">Lecturer\'s Email</string>
    <string name="TEXT_EMAIL">Email</string>
    <string name="ERROR">An error occurred! Try again later.</string>
    <string name="TITLE_ASSOC_PROF">Assoc. PROF.</string>
    <string name="TITLE_PROF_DR">PROF. DR.</string>
    <string name="TITLE_ASST_PROF">Asst. PROF.</string>
    <string name="TITLE_DR">DR.</string>
    <string name="TITLE_INSTRUCTOR">Instructor</string>
    <string name="TITLE_RESEARCH_ASST">Res. Asst.</string>
    <string name="BUTTON_EDIT">Edit</string>
    <string name="BUTTON_DELETE">Delete</string>
    <string name="TEXT_FACULTY">Faculty</string>
    <string name="BUTTON_OK">OK</string>
    <string name="TEXT_SELECT_LECTURER">Select Lecturer</string>
    <string name="TEXT_SELECT_COURSE">Select Course</string>
    <string name="ERROR_INVALID_EMAIL">Invalid email format.</string>
    <string name="ERROR_USER_NOT_FOUND">No user found with this email address.</string>
    <string name="ERROR_WRONG_PASSWORD">The password you entered is incorrect, try again!</string>
    <string name="ERROR_USER_DISABLED">This user account has been disabled.</string>
    <string name="ERROR_TOO_MANY_REQUESTS">Too many failed attempts. Please try again later.</string>
    <string name="ERROR_UNKNOWN">An unknown error occurred:</string>
    <string name="ERROR_UNEXPECTED">An unexpected error occurred:</string>
    <string name="ERROR_INVALID_CREDENTIAL">Email or password is incorrect!</string>
    <string name="MSG_MAIN_PAGE">Don\'t have an account yet?\n\nPlease contact Student Affairs and request your account information!</string>
    <string name="MSG_FORGOT_PASSWORD_DISABLED">Forgot your password?\n\nPlease contact Student Affairs to reset your password!</string>
    <string name="ERROR_PASSWORDS_NOT_MATCH">The passwords don\'t match each other!</string>
    <string name="ERROR_SHORT_PASSWORD">The password must be at least 6 characters.</string>
    <string name="MSG_SUCCESS_FORGOT_PASSWORD">The password was changed successfully!</string>
    <string name="WARNING">WARNING</string>
    <string name="ERROR_REGISTERED_EMAIL">The email address you entered is already registered.</string>
    <string name="MSG_QR_CODE_SCAN_BUTTON">To scan the QR code, click the button below and scan the QR code with your camera.</string>
    <string name="BUTTON_SCAN_NFC">Scan with NFC</string>
    <string name="BUTTON_ENTER_CODE">Enter Code</string>
    <string name="MSG_NFC_SCAN_BUTTON">To scan with NFC, click the button below and bring your phone close to the attendance device</string>
    <string name="MSG_ENTER_CODE">To use the code to take attendance, enter the code provided by Lecturer.</string>
    <string name="TEXT_DARK_MODE">Dark Mode:</string>
    <string name="MSG_QR_CODE_INVALID">The QR code is invalid, please try again!</string>
    <string name="MSG_ATTENDANCE_SUCCESS">You attended the course successfully!</string>
    <string name="MSG_ALREADY_ATTENDED">You have already attended this course.</string>
    <string name="ERROR_NOT_TAKEN_USER_INFO">User information not found, please login again.</string>
    <string name="TEXT_ATTENDANCE_DATE">Date:</string>
    <string name="TEXT_ATTENDANCE_TIME">Time:</string>
    <string name="MSG_NFC_NOT_ENABLED">NFC is not working. Please enable NFC in settings.</string>
    <string name="MSG_NFC_NOT_SUPPORTED">Your device doesn\'t support NFC. Please use QR or 6-Digit Code to attend.</string>
    <string name="TEXT_NFC_STATUS_PENDING">Pending NFC…</string>
    <string name="TEXT_NFC_STATUS_SCANNING">Scanning NFC…</string>
    <string name="TEXT_NFC_STATUS_SUCCESS">NFC scan successful.</string>
    <string name="TEXT_NFC_STATUS_FAILED">An error occurred while reading NFC.</string>
    <string name="MSG_NFC_INVALID">The NFC is invalid, please try again!</string>
    <string name="MSG_CODE_INVALID">The Code is invalid, please try again!</string>
    <string name="MSG_SESSION_INACTIVE">This session is inactive, attend with a new session.</string>
    <string name="MSG_NO_ATTENDANCES">You don\'t have an attendance record.</string>
    <string name="TEXT_STATUS">Status:</string>
    <string name="TEXT_LATE">Late</string>
    <string name="TEXT_ON_TIME">On Time</string>
    <string name="TEXT_IMAGEVIEW_PROFILE" translatable="false">Profile</string>
    <string name="TEXT_GRADE">Grade</string>
    <string name="BUTTON_LOGOUT">Logout</string>
    <string name="MSG_QUIT">Are you sure you want to quit?</string>
    <string name="TEXT_ATTENDANCE_TYPE">Attendance Type</string>
    <string name="TEXT_QR_CODE">QR Code</string>
    <string name="TEXT_NFC">NFC</string>
    <string name="TEXT_SIX_DIGIT_CODE">6-Digit Code</string>
    <string name="MSG_USER_UID_NOT_FOUND">There was an error logging in to the app, please log in again!</string>
    <string name="MSG_TAG_NOT_WRITABLE">The tag is not writable!</string>
    <string name="MSG_BIG_DATA_TO_WRITE_TAG">This data is very big to write into this tag!</string>
    <string name="MSG_TAG_NOT_SUPPORT_NDEF">This tag does not support NDEF!</string>
    <string name="ERROR_SESSION_DELETE">An error occurred during deleting session!</string>
    <string name="MSG_SESSION_DELETE">The session was deleted because NFC was not written.</string>
    <string name="MSG_WRITE_SUCCESS">The course was successfully written to the NFC tag.</string>
    <string name="ERROR_WRITE_NFC">The course could not be written to the NFC tag.</string>
    <string name="ERROR_SESSION_CREATE">An error occurred during creating session!</string>
    <string name="MSG_NOT_ATTEND">You couldn\'t attend the attendance!</string>
    <string name="ERROR_FETCHING_COURSES">An error occurred during fetching courses!</string>
    <string name="MSG_SESSION_DISABLED">Previous session disabled.</string>
    <string name="ERROR_SESSION_DISABLED">An error occurred during disabling previous session!</string>
    <string name="ERROR_FETCHING_ATTENDANCE_LIST">An error occurred during fetching the attendance list!</string>
    <string name="ERROR_NOT_CHANGE_PASSWORD">Error: Password could not be changed. The link may have expired.</string>
    <string name="MSG_PASSWORD_RESET_LINK_INVALID_OR_EXPIRED">The password reset link is invalid or expired.</string>
    <string name="ERROR_ATTEND_COURSE">An error occurred during attending course!</string>
    <string name="MSG_SESSION_INVALID">The session is invaild.</string>
    <string name="ERROR_FETCHING_USERS">An error occurred during fetching users!</string>
    <string name="ERROR_FETCHING_SESSION">An error occurred during fetching session!</string>
    <string name="ERROR_CONNECTION_TITLE">Connection problem</string>
    <string name="ERROR_LOADING_USER_RETRY">Could not load your information. Please try again.</string>
    <string name="BUTTON_RETRY">Retry</string>
    <string name="BUTTON_CLOSE">Close</string>
</resources>