<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp">

    <ImageView
        android:id="@+id/ivClassQRoom"
        android:layout_width="350dp"
        android:layout_height="134dp"
        android:background="@drawable/logo_classqroom"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/TEXT_IMAGEVIEW_LOGO" />

    <TextView
        android:id="@+id/tvDisabledMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_transparent"
        android:padding="20dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/MSG_FORGOT_PASSWORD_DISABLED"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black_white"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_below="@id/ivClassQRoom"
        android:visibility="visible">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivClassQRoom"
            android:autofillHints="emailAddress"
            android:hint="@string/TEXT_STUDENT_EMAIL"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfStudentNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tfEmail"
        android:visibility="visible">

        <EditText
            android:id="@+id/edtStudentNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:hint="@string/TEXT_STUDENT_NUMBER"
            android:inputType="number"
            android:maxLength="12"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_below="@id/ivClassQRoom"
        android:visibility="gone"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/TEXT_PASSWORD"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tfNewPassword"
        android:visibility="gone"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/TEXT_CONFIRM_PASSWORD"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llbuttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tfStudentNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:background="@drawable/bg_cancel_button"
            android:text="@string/BUTTON_CANCEL"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="20sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_login_button"
            android:text="@string/BUTTON_NEXT"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llotherbuttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tfConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_cancel_button"
            android:text="@string/BUTTON_BACK"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResetPassword"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_login_button"
            android:text="@string/BUTTON_RESET_PASSWORD"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>