<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/bg_rounded_corners">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:background="@drawable/bg_app"
        android:contentDescription="@string/TEXT_NFC"/>

    <TextView
        android:id="@+id/tvNFCStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ivIcon"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:background="@drawable/bg_transparent"
        android:text="@string/TEXT_NFC_STATUS_PENDING" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBackNFCScanner"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_below="@id/tvNFCStatus"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_login_button"
        android:text="@string/BUTTON_BACK"
        android:textColor="@android:color/white"/>

</RelativeLayout>