<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mrtkyr.classqroom.main.LoginActivity">

    <ImageView
        android:id="@+id/ivClassQRoom"
        android:layout_width="350dp"
        android:layout_height="134dp"
        android:background="@drawable/logo_classqroom"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/TEXT_IMAGEVIEW_LOGO" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_below="@id/ivClassQRoom">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/TEXT_STUDENT_EMAIL"
            android:inputType="textEmailAddress"
            android:maxWidth="400dp"
            android:maxLength="48"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tfEmail"
        android:layout_marginTop="8dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:hint="@string/TEXT_PASSWORD"
            android:inputType="textPassword"
            android:maxWidth="400dp"
            android:maxLength="24"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llbuttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tfPassword"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/bg_cancel_button"
            android:text="@string/BUTTON_BACK"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_login_button"
            android:text="@string/BUTTON_LOGIN"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llbuttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="15dp"
        android:text="@string/BUTTON_FORGOT_PASSWORD"
        android:textColor="@color/blue"
        android:textSize="14sp"
        android:textStyle="bold|normal"/>

    <ProgressBar
        android:id="@+id/pbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>